feat: enhance PopulatorUtility; add error handling for data population methods and introduce showAlert method for user notifications