@@ -2,6 +2,7 @@ package com.projecthub.utils.ui;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -27,6 +28,7 @@ import com.projecthub.repository.StudentRepository;
 import com.projecthub.repository.TaskRepository;
 import com.projecthub.repository.TeamRepository;
 
+import javafx.scene.control.Alert;
 import javafx.scene.control.TreeItem;
 
 /**
@@ -83,13 +85,17 @@ public class PopulatorUtility {
      * @param parentItem the root TreeItem to which Schools are added
      */
     public void populateSchools(TreeItem<TreeItemWrapper> parentItem) {
-        List<SchoolDTO> schools =  schoolRepository.findAll().stream()
-                .map(schoolMapper::toSchoolDTO)
-                .toList();
-        for (SchoolDTO school : schools) {
-            TreeItemWrapper schoolWrapper = new TreeItemWrapper(school.getName(), school);
-            TreeItem<TreeItemWrapper> schoolItem = new TreeItem<>(schoolWrapper);
-            parentItem.getChildren().add(schoolItem);
+        try {
+            List<SchoolDTO> schools = schoolRepository.findAll().stream()
+                    .map(schoolMapper::toSchoolDTO)
+                    .collect(Collectors.toList());
+            for (SchoolDTO school : schools) {
+                TreeItemWrapper schoolWrapper = new TreeItemWrapper(school.getName(), school);
+                TreeItem<TreeItemWrapper> schoolItem = new TreeItem<>(schoolWrapper);
+                parentItem.getChildren().add(schoolItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate schools: " + e.getMessage());
         }
     }
 
@@ -100,13 +106,17 @@ public class PopulatorUtility {
      * @param schoolId   the ID of the School
      */
     public void populateCohorts(TreeItem<TreeItemWrapper> parentItem, UUID schoolId) {
-        List<CohortDTO> cohorts = cohortRepository.findBySchoolId(schoolId).stream()
-                .map(cohortMapper::toCohortDTO)
-                .toList();
-        for (CohortDTO cohort : cohorts) {
-            TreeItemWrapper cohortWrapper = new TreeItemWrapper(cohort.getName(), cohort);
-            TreeItem<TreeItemWrapper> cohortItem = new TreeItem<>(cohortWrapper);
-            parentItem.getChildren().add(cohortItem);
+        try {
+            List<CohortDTO> cohorts = cohortRepository.findBySchoolId(schoolId).stream()
+                    .map(cohortMapper::toCohortDTO)
+                    .collect(Collectors.toList());
+            for (CohortDTO cohort : cohorts) {
+                TreeItemWrapper cohortWrapper = new TreeItemWrapper(cohort.getName(), cohort);
+                TreeItem<TreeItemWrapper> cohortItem = new TreeItem<>(cohortWrapper);
+                parentItem.getChildren().add(cohortItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate cohorts: " + e.getMessage());
         }
     }
 
@@ -117,13 +127,17 @@ public class PopulatorUtility {
      * @param cohortId   the ID of the Cohort
      */
     public void populateTeams(TreeItem<TreeItemWrapper> parentItem, UUID cohortId) {
-        List<TeamDTO> teams = teamRepository.findByCohortId(cohortId).stream()
-                .map(teamMapper::toTeamDTO)
-                .toList();
-        for (TeamDTO team : teams) {
-            TreeItemWrapper teamWrapper = new TreeItemWrapper(team.getName(), team);
-            TreeItem<TreeItemWrapper> teamItem = new TreeItem<>(teamWrapper);
-            parentItem.getChildren().add(teamItem);
+        try {
+            List<TeamDTO> teams = teamRepository.findByCohortId(cohortId).stream()
+                    .map(teamMapper::toTeamDTO)
+                    .collect(Collectors.toList());
+            for (TeamDTO team : teams) {
+                TreeItemWrapper teamWrapper = new TreeItemWrapper(team.getName(), team);
+                TreeItem<TreeItemWrapper> teamItem = new TreeItem<>(teamWrapper);
+                parentItem.getChildren().add(teamItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate teams: " + e.getMessage());
         }
     }
 
@@ -134,13 +148,17 @@ public class PopulatorUtility {
      * @param teamId     the ID of the Team
      */
     public void populateProjects(TreeItem<TreeItemWrapper> parentItem, UUID teamId) {
-        List<ProjectDTO> projects = projectRepository.findByTeamId(teamId).stream()
-                .map(projectMapper::toProjectDTO)
-                .toList();
-        for (ProjectDTO project : projects) {
-            TreeItemWrapper projectWrapper = new TreeItemWrapper(project.getName(), project);
-            TreeItem<TreeItemWrapper> projectItem = new TreeItem<>(projectWrapper);
-            parentItem.getChildren().add(projectItem);
+        try {
+            List<ProjectDTO> projects = projectRepository.findByTeamId(teamId).stream()
+                    .map(projectMapper::toProjectDTO)
+                    .collect(Collectors.toList());
+            for (ProjectDTO project : projects) {
+                TreeItemWrapper projectWrapper = new TreeItemWrapper(project.getName(), project);
+                TreeItem<TreeItemWrapper> projectItem = new TreeItem<>(projectWrapper);
+                parentItem.getChildren().add(projectItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate projects: " + e.getMessage());
         }
     }
 
@@ -151,13 +169,17 @@ public class PopulatorUtility {
      * @param projectId  the ID of the Project
      */
     public void populateComponents(TreeItem<TreeItemWrapper> parentItem, UUID projectId) {
-        List<ComponentDTO> components = componentRepository.findByProjectId(projectId).stream()
-                .map(componentMapper::toComponentDTO)
-                .toList();
-        for (ComponentDTO component : components) {
-            TreeItemWrapper componentWrapper = new TreeItemWrapper(component.getName(), component);
-            TreeItem<TreeItemWrapper> componentItem = new TreeItem<>(componentWrapper);
-            parentItem.getChildren().add(componentItem);
+        try {
+            List<ComponentDTO> components = componentRepository.findByProjectId(projectId).stream()
+                    .map(componentMapper::toComponentDTO)
+                    .collect(Collectors.toList());
+            for (ComponentDTO component : components) {
+                TreeItemWrapper componentWrapper = new TreeItemWrapper(component.getName(), component);
+                TreeItem<TreeItemWrapper> componentItem = new TreeItem<>(componentWrapper);
+                parentItem.getChildren().add(componentItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate components: " + e.getMessage());
         }
     }
 
@@ -168,13 +190,17 @@ public class PopulatorUtility {
      * @param cohortId   the ID of the Cohort
      */
     public void populateStudents(TreeItem<TreeItemWrapper> parentItem, UUID cohortId) {
-        List<StudentDTO> students = studentRepository.findByCohortId(cohortId).stream()
-                .map(studentMapper::toStudentDTO)
-                .toList();
-        for (StudentDTO student : students) {
-            TreeItemWrapper studentWrapper = new TreeItemWrapper(student.getFirstName(), student);
-            TreeItem<TreeItemWrapper> studentItem = new TreeItem<>(studentWrapper);
-            parentItem.getChildren().add(studentItem);
+        try {
+            List<StudentDTO> students = studentRepository.findByCohortId(cohortId).stream()
+                    .map(studentMapper::toStudentDTO)
+                    .collect(Collectors.toList());
+            for (StudentDTO student : students) {
+                TreeItemWrapper studentWrapper = new TreeItemWrapper(student.getFirstName(), student);
+                TreeItem<TreeItemWrapper> studentItem = new TreeItem<>(studentWrapper);
+                parentItem.getChildren().add(studentItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate students: " + e.getMessage());
         }
     }
 
@@ -185,13 +211,31 @@ public class PopulatorUtility {
      * @param projectId  the ID of the Project
      */
     public void populateTasks(TreeItem<TreeItemWrapper> parentItem, UUID projectId) {
-        List<TaskDTO> tasks = taskRepository.findByProjectId(projectId).stream()
-                .map(taskMapper::toTaskDTO)
-                .toList();
-        for (TaskDTO task : tasks) {
-            TreeItemWrapper taskWrapper = new TreeItemWrapper(task.getName(), task);
-            TreeItem<TreeItemWrapper> taskItem = new TreeItem<>(taskWrapper);
-            parentItem.getChildren().add(taskItem);
+        try {
+            List<TaskDTO> tasks = taskRepository.findByProjectId(projectId).stream()
+                    .map(taskMapper::toTaskDTO)
+                    .collect(Collectors.toList());
+            for (TaskDTO task : tasks) {
+                TreeItemWrapper taskWrapper = new TreeItemWrapper(task.getName(), task);
+                TreeItem<TreeItemWrapper> taskItem = new TreeItem<>(taskWrapper);
+                parentItem.getChildren().add(taskItem);
+            }
+        } catch (Exception e) {
+            showAlert("Error", "Failed to populate tasks: " + e.getMessage());
         }
+    }
+
+    /**
+     * Shows an alert with the specified title and message.
+     *
+     * @param title   the title of the alert
+     * @param message the message of the alert
+     */
+    private void showAlert(String title, String message) {
+        Alert alert = new Alert(Alert.AlertType.ERROR);
+        alert.setTitle(title);
+        alert.setHeaderText(null);
+        alert.setContentText(message);
+        alert.showAndWait();
     }
 }
